--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/fumixer/u-develop-it#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "inquirer": "^8.2.4",
     "mysql2": "^2.3.3",
-    "utils": "^0.3.1"
+    "utils": "^0.2.2"
   },
   "devDependencies": {
     "jest": "^28.1.3"
